<resources>
    <string name="app_name">School_live_simulator</string>
    <string name="game_activity_1">10000</string>
    <string name="game_activity_2">10 september 2021</string>
    <string name="fun_scr_1">Neutral actions</string>
    <string name="fun_scr_2">Good actions</string>
    <string name="fun_scr_3">Bad Actions</string>
    <string name="fun_scr_4">Art</string>
    <string name="bot_nav_work">work</string>
    <string name="bot_nav_school">school</string>
    <string name="bot_nav_shop">shop</string>
    <string name="bot_nav_fun">fun</string>
    <string name="bot_nav_food">food</string>
    <string name="satietyProgressBar">Satiety</string>
    <string name="happinessProgressBar">Happiness</string>
    <string name="schoolPerformanceProgressBar">School performance</string>
    <string name="school_go_to_school">Go to school</string>
    <string name="school_learn_yourself">Learn by yourself</string>
    <string name="school_buy_cheatbook">Buy a cheatbook</string>
    <string name="school_learn_from_a_student">Learn from a student</string>
    <string name="school_sign_up_in_an_online_school">Sign up in an online school</string>
    <string name="school_hire_a_good_tutor">Hire a good tutor</string>
    <string name="school_study_with_uni_teacher">Study with a teacher from University</string>
    <string name="go_to_school_school_performance">+3</string>
    <string name="go_to_school_money">0</string>
    <string name="learn_yourself_school_performance">+50</string>
    <string name="learn_yourself_money">-100</string>
    <string name="buy_cheatbook_school_performance">+100</string>
    <string name="buy_cheatbook_money">-300</string>
    <string name="learn_from_student_school_performance">+250</string>
    <string name="learn_from_student_money">-1000</string>
    <string name="sign_up_in_an_online_school_school_performance">+15</string>
    <string name="sign_up_in_an_online_school_money">-10000</string>
    <string name="hire_a_good_tutor_school_performance">+600</string>
    <string name="hire_a_good_tutor_money">-15000</string>
    <string name="study_with_uni_teacher_school_performance">+1000</string>
    <string name="study_with_uni_teacher_money">-25000</string>
    <string name="food_eat_crackers">Eat some crackers</string>
    <string name="food_eat_doshirack">Eat some noodles \"Doshirack\"</string>
    <string name="food_eat_at_the_canteen">Eat at the school canteen</string>
    <string name="food_eat_at_Mcdonalds">Eat at local McDonald\'s</string>
    <string name="food_order_delivery">Order a food delivery</string>
    <string name="food_go_to_the_restaurant">Go to the restaurant</string>
    <string name="crackers_satiety">+25</string>
    <string name="crackers_happiness">+50</string>
    <string name="crackers_money">-10</string>
    <string name="doshirack_satiety">+50</string>
    <string name="doshirack_happiness">-100</string>
    <string name="doshirack_money">-50</string>
    <string name="eatery_food_satiety">+120</string>
    <string name="eatery_food_happiness">-150</string>
    <string name="eatery_food_money">-300</string>
    <string name="mcdonalds_satiety">+200</string>
    <string name="mcdonalds_happiness">-200</string>
    <string name="mcdonalds_money">-1000</string>
    <string name="pizza_at_home_satiety">+450</string>
    <string name="pizza_at_home_happiness">+50</string>
    <string name="pizza_at_home_money">-4000</string>
    <string name="restaurant_food_satiety">+800</string>
    <string name="restaurant_food_happiness">+500</string>
    <string name="restaurant_food_money">-10000</string>
    <string name="work_collect_change">Collect change on the street</string>
    <string name="work_watch_ads">Watch online advertisement</string>
    <string name="work_distribute_flyers">Distribute flyers</string>
    <string name="work_as_a_greener">Work as a greener</string>
    <string name="work_as_a_courier">Work as a courier</string>
    <string name="work_as_a_courier_v0">Buy bicycle to work as a courier</string>
    <string name="work_as_a_courier_v1">Work as a courier: Slow delivery</string>
    <string name="work_as_a_courier_v2">Work as a courier: Normal Delivery</string>
    <string name="work_as_a_courier_v3">Work as a courier: Fast Delivery</string>
    <string name="work_as_an_operator">Work as a call center operator</string>
    <string name="work_play_guitar">Play guitar</string>
    <string name="work_play_guitar_v0">Pass course first to play guitar</string>
    <string name="work_play_guitar_v1">Play guitar: on one chord</string>
    <string name="work_play_guitar_v2">Play guitar: Sector Gaza with three chords</string>
    <string name="work_play_guitar_v3">Play guitar: Smells like teen spirit</string>
    <string name="work_play_guitar_v4">Play guitar: Jazz with a friend(trumpet musician)</string>
    <string name="work_play_guitar_v5">Play guitar: Bach Das Wohltemperierte Klavier</string>
    <string name="work_on_the_net">Work on the net</string>
    <string name="work_on_the_net_v0">Pass course first to work on the net</string>
    <string name="work_on_the_net_v1">Boost accounts in games</string>
    <string name="work_on_the_net_v2">Promote instagram accounts</string>
    <string name="work_on_the_net_v3">Make sites on wix</string>
    <string name="work_on_the_net_v4">Work as a video editor</string>
    <string name="work_on_the_net_v5">Work as a GameDev</string>
    <string name="work_collect_change_income">+10</string>
    <string name="work_collect_change_happiness">-10</string>
    <string name="work_watch_ads_income">+300</string>
    <string name="work_watch_ads_happiness">-15</string>
    <string name="work_watch_ads_satiety">-5</string>
    <string name="work_distribute_flyers_income">+200</string>
    <string name="work_distribute_flyers_happiness">-40</string>
    <string name="work_as_a_greener_income">+500</string>
    <string name="work_as_a_greener_happiness">-50</string>
    <string name="work_as_an_operator_income">+1000</string>
    <string name="work_as_an_operator_happiness">-80</string>
    <string name="work_as_a_courier_v1_income">+100</string>
    <string name="work_as_a_courier_v1_happiness">-20</string>
    <string name="work_as_a_courier_v2_income">+500</string>
    <string name="work_as_a_courier_v2_happiness">-15</string>
    <string name="work_as_a_courier_v3_income">+5000</string>
    <string name="work_as_a_courier_v3_happiness">-10</string>
    <string name="work_play_guitar_v1_income">+100</string>
    <string name="work_play_guitar_v1_happiness">-10</string>
    <string name="work_play_guitar_v2_income">+500</string>
    <string name="work_play_guitar_v2_happiness">-10</string>
    <string name="work_play_guitar_v3_income">+1000</string>
    <string name="work_play_guitar_v3_happiness">-10</string>
    <string name="work_play_guitar_v4_income">+2500</string>
    <string name="work_play_guitar_v4_happiness">-10</string>
    <string name="work_play_guitar_v5_income">+5000</string>
    <string name="work_play_guitar_v5_happiness">-10</string>
    <string name="work_on_the_net_v1_happiness">-10</string>
    <string name="work_on_the_net_v1_income">+200</string>
    <string name="work_on_the_net_v1_satiety">-10</string>
    <string name="work_on_the_net_v2_happiness">-15</string>
    <string name="work_on_the_net_v2_satiety">-15</string>
    <string name="work_on_the_net_v2_income">+500</string>
    <string name="work_on_the_net_v3_happiness">0</string>
    <string name="work_on_the_net_v3_satiety">-10</string>
    <string name="work_on_the_net_v3_income">+700</string>
    <string name="work_on_the_net_v4_happiness">0</string>
    <string name="work_on_the_net_v4_satiety">-15</string>
    <string name="work_on_the_net_v4_income">+2000</string>
    <string name="work_on_the_net_v5_happiness">0</string>
    <string name="work_on_the_net_v5_satiety">-15</string>
    <string name="work_on_the_net_v5_income">+3000</string>
    <string name="fun_draw_on_desks">Draw on desks</string>
    <string name="fun_draw_graffities">Draw graffities in school toilets</string>
    <string name="fun_make_something_handmade">Make something handmade</string>
    <string name="fun_cover_a_song">Cover your favorite song</string>
    <string name="fun_write_a_song">Write a song yourself</string>
    <string name="fun_stream">Stream on twitch for 4 hours</string>
    <string name="fun_make_a_youtube_video">Make a video for youtube</string>
    <string name="fun_do_nothing">Do nothing</string>
    <string name="fun_go_cycling">Go cycling</string>
    <string name="fun_listen_to_the_music">Listen to the music</string>
    <string name="fun_donate_and_play_computer">Donate and play computer</string>
    <string name="fun_go_to_the_shopping_mall">Go with friends to the shopping mall</string>
    <string name="fun_walk_with_your_girlfriend">Walk with your girlfriend</string>
    <string name="fun_read_a_book">Read a book</string>
    <string name="fun_help_youngsters_with_homework">Help youngsters with homework</string>
    <string name="fun_do_sport">Do sport</string>
    <string name="fun_play_guitar">Play guitar</string>
    <string name="fun_go_to_the_theatre">Go to the theatre</string>
    <string name="fun_go_to_the_concert">Go to the concert as a VIP</string>
    <string name="fun_kick_a_trash_can">Kick a trash can</string>
    <string name="fun_intimidate_youngsters">Intimidate elementary school students</string>
    <string name="fun_upload_virus">Upload virus to school computer</string>
    <string name="fun_use_chat_roulette">Cam2cam in chat roulette(???)</string>
    <string name="fun_have_a_party">Have a party at home</string>
    <string name="fun_go_to_the_club">Go to the club(???)</string>
    <string name="shop_guitar_course_v1">Learn from a bum at the yard</string>
    <string name="shop_guitar_course_v2">First song course</string>
    <string name="shop_guitar_course_v3">Learn from a neighbour at the yard</string>
    <string name="shop_guitar_course_v4">Enroll in the music school</string>
    <string name="shop_guitar_course_v5">Enroll in conservatory courses</string>
    <string name="shop_computer_course_v1">Friend\'s course</string>
    <string name="shop_computer_course_v2">Online webinars</string>
    <string name="shop_computer_course_v3">Online web design courses</string>
    <string name="shop_computer_course_v4">Video editing courses</string>
    <string name="shop_computer_course_v5">GameDev courses</string>
    <string name="shop_ussr_bicycle">USSR bicycle</string>
    <string name="shop_usual_bicycle">Usual bicycle</string>
    <string name="shop_mountain_bicycle">Mountain bicycle</string>
    <string name="shop_ussr_guitar">USSR guitar</string>
    <string name="shop_ural_guitar">Ural guitar</string>
    <string name="shop_yamaha_guitar">Yamaha guitar</string>
    <string name="shop_fender_guitar">Fender guitar</string>
    <string name="shop_double_neck_guitar">Double Neck guitar</string>
    <string name="shop_previously_used_computer">Previously used computer</string>
    <string name="shop_old_computer">Old computer</string>
    <string name="shop_usual_computer">Usual computer</string>
    <string name="shop_xiaomi_computer">Xiaomi Mi Notebook</string>
    <string name="shop_macbook_computer">Apple Macbook</string>
    <string name="about_game">about game</string>
    <string name="about_game_icon_authors">Icons are made by this authors from www.flaticon.com:</string>
    <string name="about_game_developers">Developers</string>
    <string name="about_game_andrey_novikov">Andrey Novikov</string>
    <string name="about_game_ivan_bazaliy">Ivan Bazalii</string>
    <string name="about_game_arseny_alekseev">Arseniy Alekseev</string>
    <string name="about_game_evgeny_sudakov">Evgeniy Sudakov</string>
    <string name="about_game_nikita_dimitruk">Nikita Dimitruk</string>
    <string name="about_game_kirill_zheludev">Kirill Zheludev</string>
</resources>