<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_interface.ScrollingFragments.ShopScrollingFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/shop_guitar_course_v1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shop_guitar_course_v1" />

        <Button
            android:id="@+id/shop_guitar_course_v2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_guitar_course_v2" />

        <Button
            android:id="@+id/shop_guitar_course_v3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_guitar_course_v3" />

        <Button
            android:id="@+id/shop_guitar_course_v4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_guitar_course_v4" />

        <Button
            android:id="@+id/shop_guitar_course_v5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_guitar_course_v5" />

        <Button
            android:id="@+id/shop_computer_course_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_computer_course_v1" />

        <Button
            android:id="@+id/shop_computer_course_v2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_computer_course_v2" />

        <Button
            android:id="@+id/shop_computer_course_v3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_computer_course_v3" />

        <Button
            android:id="@+id/shop_computer_course_v4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_computer_course_v4" />

        <Button
            android:id="@+id/shop_computer_course_v5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_computer_course_v5" />

        <Button
            android:id="@+id/shop_ussr_bicycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_ussr_bicycle" />

        <Button
            android:id="@+id/shop_usual_bicycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_usual_bicycle" />

        <Button
            android:id="@+id/shop_mountain_bicycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_mountain_bicycle" />

        <Button
            android:id="@+id/shop_ussr_guitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_ussr_guitar" />

        <Button
            android:id="@+id/shop_ural_guitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_ural_guitar" />

        <Button
            android:id="@+id/shop_yamaha_guitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_yamaha_guitar" />

        <Button
            android:id="@+id/shop_fender_guitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_fender_guitar" />

        <Button
            android:id="@+id/shop_double_neck_guitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_double_neck_guitar" />

        <Button
            android:id="@+id/shop_previously_used_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_previously_used_computer" />

        <Button
            android:id="@+id/shop_old_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_old_computer" />

        <Button
            android:id="@+id/shop_usual_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_usual_computer" />

        <Button
            android:id="@+id/shop_xiaomi_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_xiaomi_computer" />

        <Button
            android:id="@+id/shop_macbook_computer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_macbook_computer" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>