<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_interface.ScrollingFragments.WorkScrollingFragment">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/workCollectChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/work_collect_change" />

        <Button
            android:id="@+id/workWatchAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_watch_ads" />

        <Button
            android:id="@+id/workDistributeFlyers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_distribute_flyers" />

        <Button
            android:id="@+id/workAsAGreener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_as_a_greener" />

        <Button
            android:id="@+id/workAsACourier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_as_a_courier_v0" />

        <Button
            android:id="@+id/workAsAnOperator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_as_an_operator" />

        <Button
            android:id="@+id/workPlayGuitar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_play_guitar_v0" />

        <Button
            android:id="@+id/workOnTheNet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_on_the_net_v1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_work_collect_change"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/work_collect_change"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="-15"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="-16"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_money"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_botnav_fun"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>